samples/_failures_safe/1761210346_3ce460_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_640fc28a.c: In function ‘main’:
./samples/SAFE/__tmp_640fc28a.c:152:17: error: expected declaration or statement at end of input
  152 |                 if (status == 1) {
      |                 ^~
./samples/SAFE/__tmp_640fc28a.c:152:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_640fc28a.c:152:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_640fc28a.c:152:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_640fc28a.c:152:17: error: expected declaration or statement at end of input
